--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 theme: jekyll-theme-slate
+title: Adaptive Documentation
+description: Adaptive is the platform companies use to transform into a place that manufactures awesome employees
+show_downloads: false
 github:
-  is_project_page: "false"
-  show_downloads: "false"
+  is_project_page: false
