--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-cayman
+theme: jekyll-theme-slate
 title: Adaptive
 description: Adaptive is the platform companies use to transform into a place that manufactures awesome employees
 show_downloads: false
