--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ theme: jekyll-theme-slate
 title: Adaptive
 description: Adaptive is the platform companies use to transform into a place that manufactures awesome employees
 show_downloads: false
+markdown: kramdown
 
 github:
   is_project_page: false
