--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-slate
-title: Adaptive
+title: Adaptive Documentation
 description: Adaptive is the platform companies use to transform into a place that manufactures awesome employees
 show_downloads: false
 markdown: kramdown
