--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-slate
 title: Adaptive Documentation
-description: Adaptive is the platform companies use to transform into a place that manufactures awesome team
+description: Adaptive is the platform companies use to create awesome teams
 show_downloads: false
 markdown: kramdown
 
