--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-slate
 title: Adaptive Documentation
-description: Adaptive is the platform companies use to create awesome teams
+description: Focus the power of collaboration to create sustainable change
 show_downloads: false
 markdown: kramdown
 
